# lighter-k8

./: Cargo.toml
.github/workflows/: agent.yaml  control-plane.yaml
agent/: Dockerfile  requirements.txt
agent/.github/workflows/: agent.yaml
agent/src/: main.py
agent/src/db/: database.py
agent/src/model/: scaler_v4_1.pkl
agent/src/trade/: executor.py
control-plane/: .gitignore  Cargo.toml  Dockerfile  README.md
control-plane/migrations/20260119120054_create_users_table/: up.sql
control-plane/src/: config.rs  error.rs  main.rs  middleware.rs  routes.rs  state.rs
control-plane/src/db/: mod.rs  schema.rs
control-plane/src/db/models/: user.rs
control-plane/src/db/repositories/: user_repository.rs
control-plane/src/handlers/: agent.rs  mod.rs  user.rs
control-plane/src/services/: mod.rs  pod_service.rs  user_service.rs
k8s/: rbac.yaml
