[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
home = "=0.5.11" 

# Web Framework (control-plane specific)
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database ORM (control-plane specific)
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1"

# Environment & Configuration (control-plane specific)
dotenvy = "0.15"
config = "0.13"

# Validation (control-plane specific)
validator = { version = "0.16", features = ["derive"] }

# Kubernetes (control-plane specific)
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_26"] }

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
